--- a/package.json
+++ b/package.json
@@ -1,29 +1,14 @@
 {
-  "name": "design-system",
-  "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
-    "next": "13.4.7",
-    "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "test": "turbo test",
+    "build": "turbo build",
+    "dev": "turbo run dev --parallel"
   },
   "devDependencies": {
-    "@rocketseat/eslint-config": "^1.2.0",
-    "prettier-plugin-tailwindcss": "^0.3.0"
+    "turbo": "^1.10.6"
   }
 }
