chore: change file-system-cache version due to bug

--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -10,6 +10,9 @@
     "build": "storybook build",
     "deploy-storybook": "storybook-to-ghpages"
   },
+  "overrides": {
+    "file-system-cache": "2.3.0"
+  },
   "dependencies": {
     "@joaogabrielf/eslint-config": "*",
     "@joaogabrielf/react": "*",
