--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -20,6 +20,9 @@ jobs:
       - run: npm ci
 
       - run: npm run build
+        env:
+          TURBO_TOKEN: Q34dYQaBXje9KyoK8mng9qih
+          TURBO_TEAM: joaogabrielf-s-team
 
       - name: Deploy storybook
         working-directory: ./packages/docs
