--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "test": "turbo test",
     "build": "turbo build",
-    "dev": "turbo run dev --parallel"
+    "dev": "turbo run dev --parallel",
+    "changeset": "changeset",
+    "version:packages": "changeset version",
+    "release": "turbo run build --filter=packages/docs && changeset publish"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.2",
     "turbo": "^1.10.6"
   },
   "overrides": {
