--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@joaogabrielf/eslint-config",
   "license": "MIT",
-  "version": "2.0.0",
-  "private": true,
+  "version": "3.0.0",
+  "private": false,
   "main": "index.js",
   "devDependencies": {
     "eslint": "^8.43.0"
