--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -24,6 +24,7 @@
     "@storybook/addon-essentials": "^7.0.23",
     "@storybook/addon-interactions": "^7.0.23",
     "@storybook/addon-links": "^7.0.23",
+    "@storybook/addon-styling": "^1.3.2",
     "@storybook/blocks": "^7.0.23",
     "@storybook/react": "^7.0.23",
     "@storybook/react-vite": "^7.0.23",
@@ -34,14 +35,17 @@
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-storybook": "^0.6.12",
     "file-system-cache": "^2.3.0",
     "polished": "^4.2.2",
+    "postcss": "^8.4.24",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.23",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   },
