--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@joaogabrielf/react",
-  "version": "2.0.1",
+  "version": "3.0.0",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
+    "build:tailwind": "tailwindcss -i ./src/input.css -o ./dist/output.css",
+    "build": "tailwindcss -i ./src/input.css -o ./dist/output.css && tsup src/index.tsx --format esm,cjs --dts --external react",
     "dev": "tsup src/index.tsx --format esm,cjs --dts --external react --watch",
     "lint": "eslint src/**/*.ts* --fix"
   },
@@ -20,7 +21,11 @@
     "@joaogabrielf/ts-config": "*",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "clsx": "^1.2.1",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "react": "^18.2.0",
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss": "^3.3.2",
     "tsup": "^7.1.0",
     "typescript": "^5.1.3"
   },
